# mlb-model

./: .gitignore  LICENSE  METHODOLOGY.md  README.md  env.template  pyproject.toml  refresh.sh
data/: odds_latest.json
deployment_data/: README.md  batter_profiles.csv  batter_splits_lhp.csv  batter_splits_rhp.csv  bullpen_unit.csv  game_results.csv  live_context.json  mlbma_sync.json  odds_latest.json  pitch_mix_batter.csv  pitch_mix_batter_l14.csv  pitch_mix_pitcher.csv  pitch_mix_pitcher_l14.csv  pitch_mix_team_batting.csv  pitch_mix_team_batting_l14.csv  player_registry.csv  prizepicks_lines.json  prop_odds_latest.json  reliever_log.csv  signals_today.csv  sleeper_lines.json  source_updated_at.txt  sp_game_log.csv  sp_l14.csv  sp_metric_splits.csv  sp_profiles.csv  team_l10_sp_hand.csv  team_profiles.csv  today_matchups.csv  underdog_lines.json
docs/: ARCHITECTURE.md  SETUP-STATUS.md  UNIFIED-MLB-INTELLIGENCE-PLAN.md
governance/: ADVANCEMENT-FRAMEWORK.md  CONSOLIDATION-PLAN.md  CURRENT-STATE-AUDIT.md  DESIGN-COMPLIANCE-CHECKLIST.md  DESIGN-CONTRACT.md  IMPLEMENTATION-STATUS-2026-06-27.md  INFORMATION-ARCHITECTURE.md  MATCHUP-REPORT-SPEC.md  MODEL-CONSTITUTION.md  MODEL-STANDARDS.md  README.md  ROADMAP-AND-RISK.md  VERIFICATION-AUDIT.md  VISUAL-MATRIX-AUDIT-2026-07-22.md
migrations/: 0001_executable_market_signals.sql  0002_paper_portfolio.sql  0003_model_leans.sql  0003_model_prediction_settlement.sql  0004_model_leans_fields.sql  0004_player_prop_outcomes.sql  0005_grading_audit.sql
mlbmodel/: __init__.py  settings.py
scripts/: apply_migration.py  (+6 more)
(+130 files in other folders)
